--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -16,7 +16,7 @@
 <body>
 <main>
   <div class="wrapper">
-
+    <div class="product-card">
     <img class="card-img"  src="163399632.jpg"alt="Laptop-photo">
 
     <div class="card-rating">
@@ -34,6 +34,7 @@
     <div class="card-button">
       <button>ADD TO CART</button>
     </div>
+  </div>
   </div>
 </main>
 </body>
