--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>CardsList component</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
 
   <style>
     .wrapper {
@@ -15,6 +17,106 @@
 <main>
   <div class="wrapper">
     <!-- CardsList component -->
+
+    <div class="product-card">
+      <img class="card-img"  src="163399632.jpg"alt="Laptop-photo">
+
+      <div class="card-rating">
+        <div class="card-rating-number">2.89<img src="Star 1 (Stroke).svg"alt="star"/></div>
+        <div class="card-price">15999</div>
+      </div>
+      <div class="card-category">
+        <div class="card-text">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
+        <div class="laptop">
+        <span>
+        laptops
+        </span>
+      </div>
+      </div>
+      <div class="card-button">
+      <button>ADD TO CART</button>
+      </div>
+    </div>
+
+    <div class="product-card">
+      <img class="card-img"  src="163399632.jpg"alt="Laptop-photo">
+
+      <div class="card-rating">
+        <div class="card-rating-number">1.96<img src="Star 1 (Stroke).svg"alt="star"/></div>
+        <div class="card-price">21500</div>
+      </div>
+      <div class="card-category">
+        <div class="card-text">Ноутбук Acer Aspire 7 A715-41G-R9KP (NH.Q8QEU.00L) Charcoal Black</div>
+        <div class="laptop">
+        <span>
+        laptops
+        </span>
+      </div>
+      </div>
+      <div class="card-button">
+      <button>ADD TO CART</button>
+      </div>
+    </div>
+
+    <div class="product-card">
+      <img class="card-img"  src="163399632.jpg"alt="Laptop-photo">
+
+      <div class="card-rating">
+        <div class="card-rating-number">2.42<img src="Star 1 (Stroke).svg"alt="star"/></div>
+        <div class="card-price">22999</div>
+      </div>
+      <div class="card-category">
+        <div class="card-text">Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black</div>
+        <div class="laptop">
+        <span>
+        laptops
+        </span>
+      </div>
+      </div>
+      <div class="card-button">
+      <button>ADD TO CART</button>
+      </div>
+    </div>
+
+    <div class="product-card">
+      <img class="card-img"  src="1111112.jpg"alt="Laptop-photo">
+
+      <div class="card-rating">
+        <div class="card-rating-number">0.53<img src="Star 1 (Stroke).svg"alt="star"/></div>
+        <div class="card-price">28999</div>
+      </div>
+      <div class="card-category">
+        <div class="card-text">Ноутбук Acer Nitro 5 AN515-55-56WH (NH.Q7PEU.00L) Obsidian Black</div>
+        <div class="laptop">
+        <span>
+        laptops
+        </span>
+      </div>
+      </div>
+      <div class="card-button">
+      <button>ADD TO CART</button>
+      </div>
+    </div>
+
+    <div class="product-card">
+      <img class="card-img"  src="163399632.jpg"alt="Laptop-photo">
+
+      <div class="card-rating">
+        <div class="card-rating-number">3.2<img src="Star 1 (Stroke).svg"alt="star"/></div>
+        <div class="card-price">22500</div>
+      </div>
+      <div class="card-category">
+        <div class="card-text">Ноутбук Acer Aspire 7 A715-75G-57LR (NH.Q87EU.006) Charcoal Black</div>
+        <div class="laptop">
+        <span>
+        laptops
+        </span>
+      </div>
+      </div>
+      <div class="card-button">
+      <button>ADD TO CART</button>
+      </div>
+    </div>
   </div>
 </main>
 </body>
