--- a/src/components/cards-list/01-css-task/style.css
+++ b/src/components/cards-list/01-css-task/style.css
@@ -1,1 +1,173 @@
 /* put your styles in this file */
+.wrapper .os-products-list {
+  grid-gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  margin: 20px 0;
+  box-sizing: border-box;
+}
+.product-card  {
+    align-content: space-between;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgb(0 0 0 / 14%);
+    display: grid;
+    grid-template-rows: .3fr .3fr 40px;
+    overflow: hidden;
+    height: 394px;
+}
+.card-img {
+  display: flex;
+  max-width: 230px;
+  max-height: 200px;
+  margin: auto;
+  padding: 12px 12px 0px;
+}
+.card-category {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+  color: #2C2C2C;
+}
+.card-rating {
+  display: flex;
+  align-self: stretch;
+  padding: 0 24px;
+  margin-top: auto;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.card-rating-number {
+  background-color: #7E72F2;
+  color: #FFFFFF;
+  border-radius: 3px;
+  width: 70px;
+  height: 27px;
+  text-align: center;
+}
+.card-rating-number img {
+  padding-top: 7px;
+  padding-left: 10px;
+}
+.card-price {
+  color: #2C2C2C;
+  font-size: 17px;
+}
+.card-text {
+  display: flex;
+  padding: 0px 12px 0px;
+}
+.laptop {
+  display: flex;
+  padding-top: 8px;
+  padding-left: 12px;
+  font-size: 9.36px;
+}
+.card-button {
+  padding-top: 12px;
+  width: 100%;
+}
+button {
+  background-color: #7E72F2;
+  color: #FFFFFF;
+  width: 100%;
+  margin-top: 22px;
+  height: 40px;
+  font-size: 12px;
+  line-height: 12px;
+  border-radius: 0px 0px 8px 8px;
+  border: 0px;
+  font-family: 'Montserrat';
+}
+
+/* Only cards-list */
+
+/* .wrapper {
+  grid-gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  margin: 20px 0;
+  box-sizing: border-box;
+  background: #FFFFFF;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  border-radius: 8px;
+}
+.product-card {
+}
+.card-rating {
+  display: flex;
+  align-self: stretch;
+  padding: 0 24px;
+  margin-top: 10px;
+  justify-content: space-between;
+  align-items: center;
+}
+.card-rating-number {
+  background-color: #7E72F2;
+  color: #FFFFFF;
+  border-radius: 3px;
+  width: 70px;
+  height: 27px;
+  text-align: center;
+}
+.card-rating-number img {
+  padding-top: 7px;
+  padding-left: 10px;
+}
+.card-price {
+  color: #2C2C2C;
+  font-size: 17px;
+}
+.card-button {
+  width: 100%;
+}
+button {
+  background-color: #7E72F2;
+  color: #FFFFFF;
+  width: 100%;
+  margin-top: 22px;
+  height: 40px;
+  font-size: 12px;
+  line-height: 12px;
+  border-radius: 0px 0px 8px 8px;
+  border: 0px;
+}
+.card-img {
+  display: flex;
+  width: 80%;
+  margin: auto;
+  padding-top: 12px;
+}
+.card-category {
+  margin-top: 16px;
+  margin-left: 24px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+  color: #2C2C2C;
+}
+.laptop {
+  padding-top: 8px;
+  font-size: 9.36px;
+}
+.product-card {
+  align-content: space-between;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgb(0 0 0 / 14%);
+    display: grid;
+    grid-template-rows: .5fr .5fr 40px;
+    overflow: hidden;
+} */
+
+
+
+
+
