--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -4,11 +4,128 @@
   <meta charset="UTF-8" />
   <title>Cart component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
 <main>
   <div id="root">
     <!-- Cart component -->
+    <div class="conteiner">
+    <div class="product-cart">
+      <img class="cart-img"  src="163399632.jpg"alt="Laptop-photo">
+
+      <div class="card-category">
+        <div class="card-text">Ноутбук Acer Aspire 3 A315-57G-336G <br>(NX.HZREU.01S) Charcoal Black</div>
+        <div class="count-sum">
+          <div class="minus">
+            <i class="bi bi-dash-circle"></i>
+          </div>
+            <span class="value">1</span>
+          <div class="plus">
+            <i class="bi bi-plus-circle"></i>
+          </div>
+        </div>
+
+        <div class="product-total">
+          <span>15999</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="product-cart">
+      <img class="cart-img"  src="163399632.jpg"alt="Laptop-photo">
+
+      <div class="card-category">
+        <div class="card-text">Ноутбук Acer Aspire 7 A715-41G-R9KP <br>(NH.Q8QEU.00L) Charcoal Black</div>
+        <div class="count-sum">
+          <div class="minus">
+            <i class="bi bi-dash-circle"></i>
+          </div>
+          <span class="value">1</span>
+          <div class="plus">
+            <i class="bi bi-plus-circle"></i>
+          </div>
+        </div>
+
+        <div class="product-total">
+          <span>21500</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="product-cart">
+      <img class="cart-img"  src="163399632.jpg"alt="Laptop-photo">
+
+      <div class="card-category">
+        <div class="card-text">Ноутбук Acer Aspire 7 A715-75G-51ZW <br>(NH.Q88EU.00P) Charcoal Black</div>
+        <div class="count-sum">
+          <div class="minus">
+            <i class="bi bi-dash-circle"></i>
+          </div>
+          <span class="value">1</span>
+          <div class="plus">
+            <i class="bi bi-plus-circle"></i>
+          </div>
+        </div>
+
+        <div class="product-total">
+          <span>22999</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="product-cart">
+      <img class="cart-img"  src="163399632.jpg"alt="Laptop-photo">
+
+      <div class="card-category">
+        <div class="card-text">Ноутбук Acer Nitro 5 AN515-55-56WH <br>(NH.Q7PEU.00L) Obsidian Black</div>
+        <div class="count-sum">
+          <div class="minus">
+            <i class="bi bi-dash-circle"></i>
+          </div>
+          <span class="value">1</span>
+          <div class="plus">
+            <i class="bi bi-plus-circle"></i>
+          </div>
+        </div>
+
+        <div class="product-total">
+          <span>28999</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="product-cart">
+      <img class="cart-img"  src="163399632.jpg"alt="Laptop-photo">
+
+      <div class="card-category">
+        <div class="card-text">Ноутбук Acer Aspire 7 A715-75G-57LR <br>(NH.Q87EU.006) Charcoal Black</div>
+        <div class="count-sum">
+          <div class="minus">
+            <i class="bi bi-dash-circle"></i>
+          </div>
+          <span class="value">1</span>
+          <div class="plus">
+            <i class="bi bi-plus-circle"></i>
+          </div>
+        </div>
+
+        <div class="product-total">
+          <span>22500</span>
+        </div>
+      </div>
+    </div>
+    </div>
+    <div class="footer">
+    <div class="cart-total">
+      <span>Total: 111997</span>
+    </div>
+    <div class="order-button">
+      <button>ORDER</button>
+    </div>
+    </div>
+
   </div>
 </main>
 </body>
