--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>FiltersList component</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
   <style>
     .wrapper {
@@ -16,6 +17,14 @@
 <main>
   <div class="wrapper">
     <!-- FiltersList component -->
+    <div class="category-title">Category</div>
+    <div class="category-list">
+      <ul class="category-ul">
+        <li class="phones"><span class="label"></span>Cell phones</li>
+        <li class="computers"><span class="label-active"></span><span class="label-tick"><img src="✓.svg"></span>
+          <span class="computrs-category">Computers & Tables</span></li>
+      </ul>
+    </div>
   </div>
 </main>
 </body>
