--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -5,6 +5,7 @@
   <title>SearchBox component</title>
 
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
   <style>
     .wrapper {
@@ -17,6 +18,8 @@
 <main>
   <div class="wrapper">
     <!-- SearchBox component -->
+    <div class="SearchBox">Search</div>
+    <div class="search-label"><i class="bi bi-search"></i></div>
   </div>
 </main>
 </body>
