--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -6,18 +6,23 @@
   border-radius: 8px;
 
 
+
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: stretch;
   flex-flow: column wrap;
-  align-content: space-between;
+  /* align-content: space-between; */
 }
 
 .card-rating {
   display: flex;
-  justify-content: space-between;
+  align-self: stretch;
+  /* flex-wrap: wrap; */
   padding: 0 24px;
   margin-top: 10px;
+  justify-content: space-between;
+  align-items: center;
+
 }
 
 .card-rating-number {
@@ -27,6 +32,7 @@
   width: 70px;
   height: 27px;
   text-align: center;
+
 }
 .card-rating-number img {
   padding-top: 7px;
@@ -37,6 +43,7 @@
 .card-price {
   color: #2C2C2C;
   font-size: 17px;
+
 }
 
 .card-button {
@@ -57,7 +64,7 @@ button {
 }
 
 .card-img {
-  text-align: center;
+  padding-left: 42px;
   width: 80%;
   margin: auto;
   padding-top: 12px;
@@ -80,3 +87,21 @@ button {
   padding-top: 8px;
   font-size: 9.36px;
 }
+
+/* .wrapper {
+  display: flex;
+  flex-wrap: wrap;
+
+}
+.card-img {
+  display: flex;
+  width: 80%;
+
+}
+.card-rating {
+  display: flex;
+
+}
+.card-price {
+
+} */
