--- a/src/components/filters-list/01-css-task/style.css
+++ b/src/components/filters-list/01-css-task/style.css
@@ -1,1 +1,69 @@
 /* put your styles in this file */
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  font-style: normal;
+  font-family: Montserrat,sans-serif;
+  background: #FFFFFF;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  color:  #2C2C2C;
+}
+.category-title {
+  display: flex;
+  font-size: 1.2rem;
+  font-weight: 600;
+  /* margin-bottom: 18px; */
+  padding-left: 10px;
+  padding-top: 20px;
+
+}
+.category-list {
+  font-size: 14px;
+}
+.category-ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+
+  font-size: 1rem;
+  font-weight: 300;
+  padding: 10px;
+}
+.phones {
+  display: flex;
+}
+.label {
+
+  border-radius: 3px;
+    height: 17px;
+    width: 20px;
+    border: 1px solid #979797;
+    display: inline-block;
+    margin-right: 12px;
+    margin-bottom: 15px;
+}
+.computers {
+  display: flex;
+
+}
+.label-active {
+  display: flex;
+  background-color: #7e72f2;
+
+  border-radius: 3px;
+  height: 17px;
+  width: 20px;
+  border: 1px solid #979797;
+
+  /* display: inline-block; */
+
+  margin-right: 12px;
+}
+.computrs-category {
+  display: flex;
+
+}
+.label-tick {
+  position: absolute;
+  padding-left: 5px;
+}
