--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,27 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /* put your styles in this file */
+.wrapper {
+  background: #FFFFFF;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  border-radius: 8px;
+  border: 0px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  color: #606060;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.SearchBox {
+
+  padding: 12px 20px;
+  align-items: center;
+  box-sizing: border-box;
+}
+.search-label {
+  padding-right: 20px;
+
+}
