--- a/src/components/double-slider/01-css-task/style.css
+++ b/src/components/double-slider/01-css-task/style.css
@@ -2,53 +2,122 @@
 
 body{
   font-family: Montserrat,sans-serif;
+  width: 350px;
+  margin: 0 auto;
+}
+.Side-bar{
+  box-shadow: 0 0 8px rgba(0,0,0,0.1);
+  border-radius: 15px;
+}
+.Underline-box{
+  margin-bottom: 20px;
+}
+.Categories-filter{
+  margin-left: 32px;
+  padding: 0;
+  width: 280px;
+  border-bottom: 1px solid #D6D6D6;
+
+}
+
+.Brand-filter{
+  margin-left: 32px;
+  width: 280px;
+  border-bottom: 1px solid #D6D6D6;
 }
 .Double-slider-wrapper{
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
+  width: 280px;
 }
 .Slider-money{
+
   display: flex;
   justify-content: space-between;
+  margin-top: 15px;
 }
-.Price-title{
+.Price-title, .Category-title{
 font-size: 1.2rem;
 }
 
 .range-slider{
   display: flex;
-  align-items: center;
+  justify-content: space-around;
+  position: relative;
 
 }
 .range-slider_inner{
-    background: #c8c2f3;
+    background: #7e72f2;
     box-shadow: 0 0 1px #7e72f2;
     display: inline-block;
     height: 4px;
     margin: 0;
     padding: 0;
     position: relative;
-    width: 100%
+    width: 100%;
 }
 
 .range-slider_progress{
-    background: #7e72f2;
+    background: #c8c2f3;
     bottom: 0;
     left: 0;
-    position: absolute;
+    position: relative;
     right: 0;
     top: 0;
     z-index: 1;
 }
 
-.leftC{
+.LeftThumb {
+  color: #C2CFE0;
   background-size: cover;
+  margin-top: -7.5px;
   cursor: grab;
+  opacity: 1;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 2;
 }
-.rightC{
+.RightThumb {
+  color: #C2CFE0;
   background-size: cover;
+  margin-top: -7px;
+  opacity: 1;
   cursor: grab;
+  bottom: 0;
+  left: 98,5%;
+  position:absolute;
+  right: 0;
+  top: 0;
+  z-index: 2;
+}
 
+.Category-device-checkbox{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+.Filter-panel-checkbox{
+  display: flex;
+  margin-top: 10px;
+}
+.Clear-button{
+  box-shadow: 0 0 8px rgba(0,0,0,0.1);
+  color:#FFFFFF;
+  background-color:#7E72F2;
+  border-radius: 8px;
+  border: none;
+  margin-top: 25px;
+  width: 350px;
+  height: 46px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 
