--- a/src/components/card/02-js-task/style.css
+++ b/src/components/card/02-js-task/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+
 
 html,
 body {
@@ -22,12 +24,13 @@ a {
 :root {
   --purple-100: #7E72F2;
   --wite: #FFFFFF;
+  --grey-100: #EDEDED;
+  --black: #2C2C2C;
 }
 
+/* Card list styling */
+
 .card-component-box {
-  /* width: 100%; */
-  /* min-width: 300px; */
-  /* width: calc(100% / 12 * 2); */
   height: 394px;
   background: var(--wite);
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
@@ -120,14 +123,11 @@ a {
   cursor: pointer;
 }
 
-/* media-query */
-
 .wrapper {
-  /* background-color: lightblue; */
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   margin-top: 20px;
+  margin-left: auto;
 
 }
 
@@ -138,6 +138,48 @@ a {
   justify-content: center;
   margin-top: 20px;
 }
+
+
+/* Pagination styling */
+
+.pagination {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pages-list {
+  list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0 15px;
+}
+
+.pages {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  background: var(--grey-100);
+  color: var(--black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bi {
+  font-size: 15px;
+}
+
+.pages:hover,
+.pages.active {
+  background-color: var(--purple-100);
+  color: var(--wite);
+}
+
+
+/* media-query */
 
 .col-1 {
   width: calc(100% / 12);
@@ -203,8 +245,12 @@ a {
   .col-m-6 {
     width: calc(100% / 12 * 6);
   }
-  .col-m-8 {
-    width: calc(100% / 12 * 8);
+  .col-m-11 {
+    width: calc(100% / 12 * 11);
+  }
+
+  .card-wrapper {
+    width: 307px;
   }
 }
 
@@ -213,9 +259,12 @@ a {
   .col-l-4 {
     width: calc(100% / 12 * 4);
   }
-  .col-l-8 {
-    width: calc(100% / 12 * 8);
+  .col-l-10 {
+    width: calc(100% / 12 * 10);
   }
+
 }
+
+
 
 
