--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+ <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-</head>
+ </head>
 <body>
 <main>
-  <div class="product-card">
+ <div class="product-card">
     <!-- Card component -->
     <img class="product-card-img" src="./img/computer.jpg" alt="laptop">
     <div class="wrapper-content">
