--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -4,19 +4,28 @@
   <meta charset="UTF-8" />
   <title>FiltersList component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- FiltersList component -->
-  </div>
-</main>
+  <main>
+    <div class="wrapper">
+      <div class="category">
+
+        <div class="blok-category">Category</div>
+
+        <div class="blok-cat">
+          <ul class="blok-kvad"></ul>
+
+          <ul class="blok-text">
+            <li>
+              <a href="#" data-element="page-link" >Monitors</a>
+            </li>
+          </ul>
+
+        </div>
+
+      </div>
+
+    </div>
+  </main>
 </body>
 </html>
