--- a/src/components/filters-list/01-css-task/style.css
+++ b/src/components/filters-list/01-css-task/style.css
@@ -1,1 +1,43 @@
-/* put your styles in this file */
+.wrapper {
+  outline: 1px solid black;
+  width: 280px;
+  height: 700px;
+  margin: 0 auto;
+}
+
+  .category{
+    outline: 1px solid black;
+    width: 100%;
+    height: 271px;
+  }
+
+    .blok-category{
+      outline: 1px solid black;
+      width: 75%;
+      height: 37px;
+      margin-left: 20px;
+      font-size: 23px;
+    }
+
+    .blok-cat{
+      outline: 1px solid black;
+      width: 75%;
+      height: 29px;
+      margin-left: 20px;
+      display: flex;
+      align-items: center;
+    }
+
+      .blok-kvad{
+        outline: 2px solid black;
+        width: 20px;
+        height: 20px;
+      }
+
+      .blok-text{list-style: none;
+        outline: 1px solid black;
+        width: 120px;
+        height: 20px;
+        margin-left: 15px;
+        font-size: 17px;
+      }
