--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>FiltersList component</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
   <main>
@@ -13,13 +14,16 @@
         <div class="blok-category">Category</div>
 
         <div class="blok-cat">
-          <ul class="blok-kvad"></ul>
 
-          <ul class="blok-text">
+          <div class="blok-kvad">
+            <div><i class="bi bi-check2"></i></div>
+          </div>
+          <div class="blok-text">
             <li>
-              <a href="#" data-element="page-link" >Monitors</a>
+              <a href="#" data-element="page-link"
+              class="none-style text-color">Monitors</a>
             </li>
-          </ul>
+          </div>
 
         </div>
 
