--- a/src/sass/blocks/_filters-list.scss
+++ b/src/sass/blocks/_filters-list.scss
@@ -1,5 +1,9 @@
-.filter {
+.filters-list {
   margin-top: 20px;
+}
+
+.filter {
+  margin-top: 10px;
   display: flex;
   span {
     margin-left: 12px;
