list + pag finished

--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -17,17 +17,16 @@
 <div id="root" class="wrapper"></div>
 
 <script type="module">
-  // import {products} from './products.js'
   import OnlineStorePage from './index.js';
 
-  fetch('https://online-store.bootcamp.place/api/products')
-  .then(response => response.json())
-  .then(products => {
+  // fetch('https://online-store.bootcamp.place/api/products?_page=1&_limit=8')
+  // .then(response => response.json())
+  // .then(products => {
     const someElement = document.querySelector('#root');
-    const page = new OnlineStorePage(products);
+    const page = new OnlineStorePage();
 
     someElement.append(page.element);
-  })
+  // })
 
 </script>
 </body>
