--- a/src/components/side-bar/01-css-task/css/style.css
+++ b/src/components/side-bar/01-css-task/css/style.css
@@ -7,16 +7,15 @@ label {
 }
 
 .side-bar {
-  width: 100%;
-  min-height: 980px;
-  padding: 1px 19px 21px 21px;
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  width: 280px;
+  margin: 7px auto 0 auto;
 }
 
 .side-bar__wrapper {
-  width: 280px;
   min-height: 980px;
-  margin: 0 auto;
+  padding: 24px 20px 10px 20px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  border-radius: 7px;
 }
 
 .filters-list {
@@ -33,10 +32,6 @@ label {
 
 .double-slider {
   margin: 22px auto 0 auto;
-}
-
-.side-bar__title.category {
-  margin-top: 28px;
 }
 
 .button-clear {
